--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,183 +1,122 @@
-body{
-background-image: url('../images/vintage-concrete.png');
-background-repeat: repeat;
-min-height:100%;
-color: #777777;
-font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+.imagetext{
+    z-index: 2;
+    position: absolute;
+    left: 70px;
+    top: 50px;
+    padding-left: 60px;
+    padding-right: 25px;
+    margin-left: -40px;
+    margin-right: 10px;
+    background-color: teal;
+    color: white;
 
 }
 
-/*.entirediv{
-	position: relative;
-	height: 750px;
-}*/
+.Image{
+    z-index: 1;
 
-.inputclass{
-	width: 585px;
-	color: #cccccc;
+}
+
+@media screen and  (min-width: 980px)  {
+.Imagecontainer{
+    margin-left: 10px;
+    margin-bottom: 15px;
+}
+
+.midsection{
+    width: 50% !important;
 }
 
 
+.imagetext{
+    text-align: center;
+    z-index: 2;
+    position: absolute;
+    left: 60px;
+    top: 70px;
+    padding-left: 20px;
+    padding-right: 22px;
+    padding-top:10px ;
+    padding-bottom:10px;
+    margin-left: 40px;
+    margin-right: 10px;
 
-header{
-	height: 75px;
-	width: 100%;
-	margin: 0 auto;
-	position: relative;
-	background-color: #ffffff;
-	margin-bottom: 10px;
-	border-bottom: 3px solid #cccccc;
-	color: #cccccc;
-	
+    background-color: teal;
+    color: white;
+
 }
 
-h1{
-	position: absolute;
-	left:150px;
-	bottom:0;
-	background-color:#4aaaa5;
-	font-size: 35px;
-	font-weight: bold;
-	padding:20px;
-	text-align: center;
-	color: #ffffff;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+.Image{
+   margin-left: 80px;
+
 }
 
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-    margin:20px 50px 20px;
 }
 
-nav{
-	position:absolute; 
-	right:150px;
-	bottom:10px;
-	padding-bottom: 15px;
-	padding-right: 30px;
-	
-}
+@media screen and  (max-width: 768px)  {
 
-section{
-	width:630px; 
-	margin:20px;
-	border:1px solid #cccccc;
-	padding:10px;
-	float: left;
-	/*position:absolute;
-	left:130px;*/
-	background-color: #ffffff;
-	margin-left: 150px;
+   .imagetext{
+       text-align: center;
+    z-index: 2;
+    position: absolute;
+    left: 40px;
+    top: 100px;
+    padding-left: 40px;
+    padding-right: 46px;
+    padding-top:10px ;
+    padding-bottom:10px;
+    margin-left: 40px;
+    margin-right: 10px;
 
-	
-}
-
-
-.imagecontainer{
-	margin: 150px;
-	float: left;
-	position: relative;
-
+    background-color: teal;
+    color: white;
 
 
 }
 
-.image{
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	bottom: -90px;
-	right:-110px;
-}
- 
-.imagetxt{ 
-	position: absolute;
-	top:30px;
-	left:-90px;
-	padding: 10px 66px 10px 65px;
-	background-color:#4aaaa5;
-	color: #ffffff;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+.aside{
+    padding:10px;
 }
 
-.biotext{
-	margin: 5px;
+.Image{
+   margin-left: 60px;
+   margin-bottom: 20px;
+
 }
-
-.imagefloating{
-	float:left;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	margin-left: 10px;
-	height:200px;
-	width: 150px;
-}	
-
-
-
-#h2midsection{
-padding: 15px;	
-border-bottom: 3px solid #cccccc;
-font-size: 25px;
-font-weight: bold;
-margin-bottom: 20px;
-color: #4aaaa5;
-font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-#h2aside{
-padding: 15px;
-border-bottom: 1px solid #cccccc;
-text-align: center;
-font-size: 25px;
-font-weight: bold;
-color: #4aaaa5;
-font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 
-.linkimage{
-padding-right:10px;
-}
+@media screen and  (max-width: 640px)  {
 
-#connectlinks{
-	margin-left: 40px;
-	margin-top: 10px;
-}
+   .imagetext{
+       text-align: center;
+    z-index: 2;
+    position: absolute;
+    left: 140px;
+    top: 100px;
+    padding-left: 40px;
+    padding-right: 46px;
+    padding-top:10px ;
+    padding-bottom:10px;
+    margin-left: 40px;
+    margin-right: 10px;
 
-aside{
-	width: 250px;
-	height: 120px;
-	padding:20px;
-	margin-left:10px;
-	margin-top: 20px;
-	margin-right: 175px;
-	background-color: #ffffff;
-	border: 1px solid #cccccc;
-	float: right;
-	/*position:absolute;
-	right:125px;
-	top:15px;*/
+    background-color: teal;
+    color: white;
+
 
 }
 
-footer{
-	text-align: center;
-	width: 100%;
-	padding:25px;
-	clear: both;
-	border-top: 5px solid  #dddddd;
-	background-color: #666666;
-	color: #777777;
-	/*position: absolute;*/
-	
+.aside{
+    padding:10px;
 }
 
-button{
-	background-color:#4aaaa5;
-	color: #ffffff;
-	font-size: 18px;
+.Image{
+   margin-left: 160px;
+   margin-bottom: 20px;
 
+}
+}
+.header{
+    text-align: center !important;
 }
