--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,18 @@
+body {
+
+    background-image: url('../images/vintage-concrete.png');
+    background-repeat: repeat;
+    height: 100%;
+    
+}
+
 .imagetext{
     z-index: 2;
     position: absolute;
     left: 70px;
     top: 50px;
     padding-left: 60px;
-    padding-right: 25px;
+    padding-right: 45px;
     margin-left: -40px;
     margin-right: 10px;
     background-color: teal;
